dark mode bugfix with kate > w <

--- a/frontend/styles/Navbar.module.css
+++ b/frontend/styles/Navbar.module.css
@@ -274,7 +274,7 @@
 }
 
 .currentDropdownMenu {
-  color: var(--red);
+  color: var(--red) !important;
 }
 
 .currentPageMenuDropdownOverlay {
@@ -291,7 +291,7 @@
 
 .clearMenuContent {
   border-radius: 15px 15px 15px 15px;
-  background-color: transparent !important;
+  background-color: rgba(255, 255, 255, 0.2) !important;
   border: 0.15vw solid var(--white);
 }
 
@@ -321,19 +321,9 @@
   color: var(--red);
 }
 
-.menuItem:hover a{
-  color: var(--red);
-  transition: color 0.3s, opacity 0.2s, visibility 0.2s;
-}
-
 .menuItemEnd:hover {
   cursor: pointer;
   color: var(--red);
-}
-
-.menuItemEnd:hover a{
-  color: var(--red);
-  transition: color 0.3s, opacity 0.2s, visibility 0.2s;
 }
 
 .menuDropdownButton {
@@ -352,6 +342,12 @@
 
 .hiddenMenuDropdownItem {
   display: none;
+}
+
+.icon {
+  transform: scale (0.9);
+  margin-right: 10px;
+  margin-left: -10px;
 }
 
 /*--- Dark mode ---*/
@@ -378,6 +374,9 @@
     color: var(--white);
   }
   .menuItemEnd {
+    color: var(--white);
+  }
+  .linkItem {
     color: var(--white);
   }
 }
